--- a/src/app/mapa/pages/portal/portal.component.html
+++ b/src/app/mapa/pages/portal/portal.component.html
@@ -1,3 +1,7 @@
+<div class="contenedor-loading " *ngIf="cargaSpinner">
+
+	<div id="loader"></div>
+</div>
 <app-navbar></app-navbar>
 <div class="flex flex-row flex-nowrap">
 	<div class="z-10 block transition-all duration-300 " [style.height]="height "
