--- a/src/app/mapa/pages/portal/portal.component.scss
+++ b/src/app/mapa/pages/portal/portal.component.scss
@@ -10,3 +10,53 @@
 	padding: 0;
 	z-index: -1;
 }
+.contenedor-loading {
+	position: absolute;
+	/* background-color: #0d2f5d; */
+	background-color: rgba(0, 0, 0, 0.479);
+	height: 100vh;
+	width: 100vw;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	z-index: 99999;
+}
+
+#loader {
+	display: block;
+	width: 200px;
+	height: 200px;
+	border-radius: 50%;
+	border: 6px solid transparent;
+	border-top-color: #da323c;
+	-webkit-animation: spin 2s linear infinite;
+	animation: spin 2s linear infinite;
+}
+
+#loader:before {
+	content: '';
+	position: absolute;
+	top: 5px;
+	left: 5px;
+	right: 5px;
+	bottom: 5px;
+	border-radius: 50%;
+	border: 6px solid transparent;
+	border-top-color: #60656c;
+	-webkit-animation: spin 3s linear infinite;
+	animation: spin 3s linear infinite;
+}
+
+#loader:after {
+	content: '';
+	position: absolute;
+	top: 15px;
+	left: 15px;
+	right: 15px;
+	bottom: 15px;
+	border-radius: 50%;
+	border: 6px solid transparent;
+	border-top-color: #e8e4e6;
+	-webkit-animation: spin 1.5s linear infinite;
+	animation: spin 1.5s linear infinite;
+}
